First trial of the site.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-
+<html>
+    <head>
+        <title>Home | ApidaX</title>
+    </head>
+    <body>
+        Welcome To ApidaX!
+    </body>
+</html>
